# poem-api

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.dev.yml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: CI.yml  ci.yml
.hooks/: pre-commit
migrations/: 20220223122206_initial.down.sql  20220223122206_initial.up.sql
src/: context.rs  lib.rs  main.rs
src/common/: error.rs  mod.rs  utils.rs
src/controller/: auth_controller.rs  mod.rs  user_controller.rs
src/db/: mod.rs  utils.rs
src/db/repo/: mod.rs  user_repo.rs
src/middleware/: error_middleware.rs  mod.rs
src/response/: base_response.rs  get_response.rs  mod.rs  post_response.rs
src/scheme/: auth_scheme.rs  mod.rs  user_scheme.rs
src/service/auth_service/: claims.rs  mod.rs
tests/: auth_tests.rs  user_tests.rs
tests/common/: mod.rs
tests/fixtures/: user_table.sql
