[package]
name = "poem-example-app"
version = "0.1.0"
authors = ["Semen Syrovatskiy <mail@syrovatskiy.tk>"]
edition = "2021"

[lib]
name = "app"
path = "src/lib.rs"
doctest = false

[dependencies]
bcrypt = "0.12.1"
chrono = "0.4.19"
jsonwebtoken = "8.1.0"
poem = { version = "1.3.29", features = ["test"] }
poem-openapi = { version = "1.3.29", features = ["swagger-ui"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }
thiserror = "1.0.30"
tokio = { version = "1.18.0", features = ["full"] }
