[package]
name = "poem-api"
version = "0.2.0"
authors = ["Semen Syrovatskiy <semen.syrovatskiy@gmail.com>"]
edition = "2021"

[dependencies]
bcrypt = "0.15.0"
chrono = "0.4.26"
jsonwebtoken = "8.3.0"
poem = { version = "1.3.57", features = ["test"] }
poem-openapi = { version = "3.0.3", features = ["swagger-ui"] }
prisma-client-rust = "0.6.9"
prisma-client-rust-cli = "0.6.9"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
